--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,7 @@
 version: "3.9"
 
 services:
+  #order-service-db
   order-service-db:
     image: postgres:15
     container_name: order-service-db
@@ -13,9 +14,16 @@ services:
       - "5432:5432"
     volumes:
       - order_db_data:/var/lib/postgresql/data
+    command: >
+      postgres
+        -c logging_collector=on
+        -c log_statement=mod
+        -c log_directory=log
+        -c log_filename=postgresql-%Y-%m-%d_%H%M%S.log
     networks:
       - order-db-network
 
+  #payment-service-db
   payment-service-db:
     image: postgres:15
     container_name: payment-service-db
@@ -28,9 +36,16 @@ services:
       - "5433:5432"
     volumes:
       - payment_db_data:/var/lib/postgresql/data
+    command: >
+      postgres
+        -c logging_collector=on
+        -c log_statement=mod
+        -c log_directory=log
+        -c log_filename=postgresql-%Y-%m-%d_%H%M%S.log
     networks:
       - payment-db-network
 
+  #restaurant-service-db
   restaurant-service-db:
     image: postgres:15
     container_name: restaurant-service-db
@@ -43,9 +58,16 @@ services:
       - "5434:5432"
     volumes:
       - restaurant_db_data:/var/lib/postgresql/data
+    command: >
+      postgres
+        -c logging_collector=on
+        -c log_statement=mod
+        -c log_directory=log
+        -c log_filename=postgresql-%Y-%m-%d_%H%M%S.log
     networks:
       - restaurant-db-network
 
+  #pg-admin-ui
   pg-admin-ui:
     image: dpage/pgadmin4
     container_name: pg-admin-ui
@@ -63,6 +85,7 @@ services:
       - payment-db-network
       - restaurant-db-network
 
+  #kafka
   kafka-1:
     image: bitnamilegacy/kafka:latest
     container_name: kafka-1
@@ -82,6 +105,7 @@ services:
     networks:
       - kafka-network
 
+  #kafka-admin-ui
   kafka-admin-ui:
     image: provectuslabs/kafka-ui:latest
     container_name: kafka-admin-ui
@@ -97,6 +121,7 @@ services:
     networks:
       - kafka-network
 
+  #api-gateway
   api-gateway:
     build:
       context: ./api-gateway
@@ -115,6 +140,7 @@ services:
     networks:
       - backend-network
 
+  #service-discovery
   service-discovery:
     build:
       context: ./service-discovery
@@ -125,6 +151,7 @@ services:
     networks:
       - backend-network
 
+  #order-service
   order-service:
     build:
       context: ./order-service
@@ -149,6 +176,7 @@ services:
       - order-db-network
       - backend-network
 
+  #payment-service
   payment-service:
     build:
       context: ./payment-service
@@ -173,6 +201,7 @@ services:
       - payment-db-network
       - backend-network
 
+  #restaurant-service
   restaurant-service:
     build:
       context: ./restaurant-service
@@ -197,6 +226,7 @@ services:
       - restaurant-db-network
       - backend-network
 
+  #notification-service
   notification-service:
     build:
       context: ./notification-service
